Estadísticas agregadas, y salida en formato BAM